@@ -26,28 +26,40 @@ Disassembly of section \.text:
 
 0000012c <f0>:
  12c:	35 00 00 00 	bi	\$0
+
 00000130 <00000000\.ovl_call\.f1_a1>:
  130:	42 02 00 4f 	ila	\$79,1024	# 400
  134:	32 00 02 80 	br	148 .*
+			134: SPU_REL16	\*ABS\*\+0x148
+
 00000138 <00000000\.ovl_call\.f2_a1>:
  138:	42 02 02 4f 	ila	\$79,1028	# 404
  13c:	32 00 01 80 	br	148 .*
+			13c: SPU_REL16	\*ABS\*\+0x148
+
 00000140 <00000000\.ovl_call\.f4_a1>:
  140:	42 02 08 4f 	ila	\$79,1040	# 410
  144:	40 20 00 00 	nop	\$0
  148:	42 00 00 ce 	ila	\$78,1
  14c:	32 00 0a 80 	br	1a0 <__ovly_load>	# 1a0
+			14c: SPU_REL16	__ovly_load
+
 00000150 <00000000\.ovl_call\.f1_a2>:
  150:	42 02 00 4f 	ila	\$79,1024	# 400
  154:	32 00 02 80 	br	168 .*
+			154: SPU_REL16	\*ABS\*\+0x168
+
 00000158 <00000000\.ovl_call\.f2_a2>:
  158:	42 02 12 4f 	ila	\$79,1060	# 424
  15c:	32 00 01 80 	br	168 .*
+			15c: SPU_REL16	\*ABS\*\+0x168
+
 00000160 <00000000\.ovl_call\.14:8>:
  160:	42 02 1a 4f 	ila	\$79,1076	# 434
  164:	40 20 00 00 	nop	\$0
  168:	42 00 01 4e 	ila	\$78,2
  16c:	32 00 06 80 	br	1a0 <__ovly_load>	# 1a0
+			16c: SPU_REL16	__ovly_load
 #...
 [0-9a-f]+ <__ovly_return>:
 [0-9a-f ]+:	3f e1 00 4e 	shlqbyi	\$78,\$0,4
